samples/_failures_safe/1761393688_e32a75_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3b77058c.c: In function ‘main’:
./samples/SAFE/__tmp_3b77058c.c:114:12: error: missing terminating " character
  114 |     printf("
      |            ^
./samples/SAFE/__tmp_3b77058c.c:114:5: error: expected expression at end of input
  114 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_3b77058c.c:114:5: error: expected declaration or statement at end of input
